# gegen

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: pr.yml  release.yml
.vhs/: demo.tape
gegen/: Cargo.toml
gegen-data/: Cargo.toml
gegen-data/src/: lib.rs  types.rs  utils.rs
gegen-tui/: Cargo.toml
gegen-tui/src/ui/: mod.rs
gegen-tui/src/ui/pages/: live_scores.rs  mod.rs
gegen/src/: data_fetch.rs  logging.rs  main.rs  state.rs
gegen/src/ui/: mod.rs
gegen/src/ui/pages/: live_scores.rs  match_overview.rs  mod.rs  shared.rs
src/: main.rs
