[workspace]
resolver = "2"
members = ["gegen-data"]

[workspace.package]
version = "0.1.2"
edition = "2024"

[workspace.dependencies]
chrono = { version = "0.4.40" }
const_format = "0.2.34"
reqwest = { version = "0.12.15" }
serde = { version = "1.0.219" }
tokio = { version = "1.44.2", features = ["full"] }
