[workspace]
resolver = "2"
members = ["gegen-data", "gegen-tui"]

[workspace.package]
version = "0.1.2"
edition = "2024"

[workspace.dependencies]
color-eyre = "0.6.3"
chrono = "0.4.40"
const_format = "0.2.34"
crossterm = "0.29.0"
ratatui = "0.29.0"
reqwest = "0.12.15"
serde = "1.0.219"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-appender = "0.2.3"
throbber-widgets-tui = "0.8.0"
