[package]
name = "gegen-data"
version.workspace = true
edition.workspace = true

[dependencies]
chrono = { workspace = true, features = ["serde"] }
const_format = { workspace = true }
reqwest = { workspace = true, features = ["json", "gzip"] }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
