[package]
name = "gegen-data"
version.workspace = true
edition.workspace = true

[dependencies]
chrono = { workspace = true, features = ["serde"] }
const_format = { workspace = true }
reqwest = { workspace = true, features = ["json", "gzip", "blocking"] }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
