[package]
name = "gegen-data"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "data fetching for gegen"

[dependencies]
chrono = { workspace = true, features = ["serde"] }
const_format = { workspace = true }
reqwest = { workspace = true, features = ["json", "gzip", "blocking"] }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
thiserror = { workspace = true }
