[package]
name = "gegen"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "football scores and fixtures from acrosss the world, in the terminal "
readme = "README.md"
repository.workspace = true
license.workspace = true


[dependencies]
chrono = { workspace = true }
color-eyre = { workspace = true }
crossbeam = { workspace = true }
crossterm = { workspace = true }
dashmap = { workspace = true }
dirs = { workspace = true }
gegen-data = { path = "../gegen-data", version = "0.1.0" }
itertools = { workspace = true }
ratatui = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
tracing-appender = { workspace = true }
throbber-widgets-tui = { workspace = true }
